# obelisk-deploy-flyio

./: .envrc-example  .gitignore  Cargo.toml  Justfile  LICENSE  README.md  dev-deps.txt  flake.nix  fly.toml-example  obelisk-local.toml  obelisk-oci.toml
.github/workflows/: check-verify.yml  check.yml  scheduled-bump-cargo-lock.yml  sync-flake-lock.yml
scripts/: clippy.sh  deploy-json.sh  dev-deps.sh  json-app-init-stargazers.sh  json-machine-create-serve.sh  json-machine-create.sh  obelisk-generate-extensions.sh  push-components.sh  secrets-send.sh  send-secrets.sh
webhook/healthcheck/: Cargo.toml
webhook/healthcheck/src/: lib.rs
workflow/deployer-workflow/impl-flyio/: Cargo.toml  build.rs
workflow/deployer-workflow/impl-flyio/src/: lib.rs  toml.rs
workflow/deployer-workflow/impl-flyio/src/snapshots/: obelisk_deployer_flyio__tests__serialize_obelisk_toml_should_produce_correct_config.snap  obelisk_deployer_flyio__toml__tests__serialize_obelisk_toml_should_produce_correct_config.snap
workflow/deployer-workflow/impl-flyio/wit/: impl.wit
workflow/deployer-workflow/wit/: dummy.wit
workflow/deployer-workflow/wit/obelisk-flyio_workflow@1.0.0-beta/: types.wit  workflow.wit
