[workspace]
resolver = "2"
members = [
    "workflow/deployer-workflow/impl-flyio",
    "webhook/healthcheck",
]

[workspace.package]
version = "0.1.0"
license = "MIT"
authors = ["Project Developers"]
edition = "2024"
repository = "TBD"
rust-version = "1.89.0"

[workspace.dependencies]
anyhow = "1.0"
assert_matches = "1.5.0"
const_format = "0.2.34"
derive_more = { version = "2.0.1", features = ["debug"] }
hashbrown = "0.16.0"
insta = "1.43.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wit-bindgen = "0.46.0"
wit-bindgen-rust = "0.46.0"
wit-parser = "0.239.0"
wstd = "0.5.6"

[profile.release]
opt-level = "z"
lto = true

[profile.release_webhook]
inherits = "release"
strip = "debuginfo"

[profile.release_workflow]
inherits = "release"
debug = "line-tables-only"
