[package]
name = "obelisk-deployer-flyio"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow.workspace = true
const_format.workspace = true
hashbrown.workspace = true
toml.workspace = true
wit-bindgen.workspace = true

[build-dependencies]
anyhow.workspace = true
wit-bindgen-rust.workspace = true
wit-parser.workspace = true

[dev-dependencies]
insta.workspace = true
